# Tiktok-Archiver

./: .gitignore  Cargo.toml  LICENSE  README.md  ecosystem.config.cjs  todo.md
.github/workflows/: build-windows.yml
src/: api.rs  discover.rs  download.rs  main.rs
src/db/: account.rs  browser.rs  config.rs  critical_alert.rs  logger.rs  mod.rs  seen_video.rs  video.rs
