[package]
name = "Tiktok-Archiver"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "cookies", "gzip"] }
regex = "1.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
headless_chrome = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.102"
serde_yaml = "0.9"